--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ VITE_GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
 # Google Cloud Console で作成した API キー（Google Picker に使用）
 # APIキーの制限: HTTP リファラー → localhost:5173/* を追加
 VITE_GOOGLE_API_KEY=your-api-key
+
+# build info
+VITE_GIT_COMMIT_HASH=xxxxxxx
+VITE_BUILD_DATE=1970-01-01T00:00:00Z
